src/objects/TR1__ExternalSearch__c.object
<CustomObject>
    <fields>
        <fullName>TR1__All_Words__c</fullName>
        <label>with all the words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Boolean_Keyword__c</fullName>
        <label>boolean string</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>US-United States</fullName>
                </value>
                <value>
                    <fullName>UK-United Kingdom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Exact_Phrase__c</fullName>
        <label>with the exact phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Board_Ids__c</fullName>
        <label>Job Board Ids</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job_Boards__c</fullName>
        <label>Job Boards</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Linked in</fullName>
                </value>
                <value>
                    <fullName>Bio Space</fullName>
                </value>
                <value>
                    <fullName>Monster</fullName>
                </value>
                <value>
                    <fullName>Career Builder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__One_Word__c</fullName>
        <label>with at least one of the words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Radius__c</fullName>
        <label>Radius</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                    <default>true</default>
                    <label>25</label>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Recency__c</fullName>
        <label>Recency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__ResumeSearch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resume Search</label>
        <referenceTo>TR1__ResumeSearch__c</referenceTo>
        <relationshipLabel>ExternalSearches</relationshipLabel>
        <relationshipName>ExternalSearches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__State_Area__c</fullName>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TR1__Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>US-All</fullName>
                </value>
                <value>
                    <fullName>AL-Alabama</fullName>
                </value>
                <value>
                    <fullName>AK-Alaska</fullName>
                </value>
                <value>
                    <fullName>AZ-Arizona</fullName>
                </value>
                <value>
                    <fullName>AR-Arkansas</fullName>
                </value>
                <value>
                    <fullName>CA-California</fullName>
                </value>
                <value>
                    <fullName>CO-Colorado</fullName>
                </value>
                <value>
                    <fullName>CT-Connecticut</fullName>
                </value>
                <value>
                    <fullName>DE-Delaware</fullName>
                </value>
                <value>
                    <fullName>DC-Dist of Columbia</fullName>
                </value>
                <value>
                    <fullName>FL-Florida</fullName>
                </value>
                <value>
                    <fullName>GA-Georgia</fullName>
                </value>
                <value>
                    <fullName>HI-Hawaii</fullName>
                </value>
                <value>
                    <fullName>ID-Idaho</fullName>
                </value>
                <value>
                    <fullName>IL-Illinois</fullName>
                </value>
                <value>
                    <fullName>IN-Indiana</fullName>
                </value>
                <value>
                    <fullName>IA-Iowa</fullName>
                </value>
                <value>
                    <fullName>KS-Kansas</fullName>
                </value>
                <value>
                    <fullName>KY-Kentucky</fullName>
                </value>
                <value>
                    <fullName>LA-Louisiana</fullName>
                </value>
                <value>
                    <fullName>ME-Maine</fullName>
                </value>
                <value>
                    <fullName>MD-Maryland</fullName>
                </value>
                <value>
                    <fullName>MA-Massachusetts</fullName>
                </value>
                <value>
                    <fullName>MI-Michigan</fullName>
                </value>
                <value>
                    <fullName>MN-Minnesota</fullName>
                </value>
                <value>
                    <fullName>MS-Mississippi</fullName>
                </value>
                <value>
                    <fullName>MO-Missouri</fullName>
                </value>
                <value>
                    <fullName>MT-Montana</fullName>
                </value>
                <value>
                    <fullName>NE-Nebraska</fullName>
                </value>
                <value>
                    <fullName>NV-Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Zip_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>External Search</label>
    <nameField>
        <displayFormat>ES-{00000000}</displayFormat>
        <label>ExternalSearch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ExternalSearches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>